added rss and atom feeds and a few pages

--- a/markdown/2013-10-05-quality.md
+++ b/markdown/2013-10-05-quality.md
@@ -1,8 +1,8 @@
 ---
 {
-    "title": "",
-    "shortTitle": "",
-    "summary": "",
+    "title": "Quality",
+    "shortTitle": "quality",
+    "summary": "on being an engineer",
     "created": "2013-10-05",
     "modified": "2013-10-05",
     "type":"blog",
