fixed links to individual blog posts on blog index.

--- a/markdown/2015-05-10-stars.md
+++ b/markdown/2015-05-10-stars.md
@@ -41,6 +41,6 @@ the middle of nowhere. It was dark. The only sound was gravel crushing under our
 
 At the top was a thin section of concrete that jutted into the water like a pier. We walked to the very end and sat next to each other. The reservoir was full almost to the top and we must have been on the tallest mountain in the area because there was nothing to see but sky and what seemed like the biggest infinity pool ever built.
 
-She raised her index finger to pouted lips and said, "shhhhhhhhhh."
+She raised her index finger to pouted lips and she said, "shhhhhhhhhh."
  
 That was my first trip to outer space.
