started on the successful programmer post. BUT! it doesn't have a header so it will break

--- a/markdown/2015-05-10-stars.md
+++ b/markdown/2015-05-10-stars.md
@@ -14,7 +14,7 @@
     ]
 }
 ---
-We were sitting on a platform surrounded by water with no land in sight and the air was crisp and still and it was good. My dangling foot was the only thing moving for miles and the stars reflected perfectly in the shiny black water. We were somehow holding hands and after a short burst of shooting stars the earth melted away at our sides and it was as if we were floating in space. 
+We were sitting on a platform surrounded by water with no land in sight and the air was crisp and still and it was good. My dangling foot was the only thing moving for miles and the sky reflected perfectly in the shiny black water so that the stars were all around us. We were somehow holding hands and after a short burst of shooting stars the earth melted away at our sides and it was as if we were floating in space. 
 
 In a way, we were.
 
