--- a/markdown/2015-05-10-stars.md
+++ b/markdown/2015-05-10-stars.md
@@ -4,7 +4,7 @@
     "shortTitle": "stars",
     "summary": "floating in stars",
     "created": "2015-05-10",
-    "modified": "2015-05-10",
+    "modified": "2015-06-02",
     "type":"blog",
     "categories": [
         "stories"
@@ -14,17 +14,17 @@
     ]
 }
 ---
-We were sitting on a platform surrounded by water with no land in sight and the air was crisp and still and it was good. My dangling foot was the only thing moving for miles and the sky reflected perfectly in the shiny black water so that the stars were all around us. We were somehow holding hands and after a short burst of shooting stars the earth melted away at our sides and it was as if we were floating in space. 
+We were sitting on a platform surrounded by water with no land in sight. The air was crisp and still and it was good. My dangling foot was the only thing moving for miles and the starlit sky reflected perfectly in the shiny black water. It seemed like the stars were all around us. We were somehow holding hands and after a short burst of shooting stars the earth melted away at our sides and it was as if we were floating in space. 
 
-In a way, we were.
+In a way, we all are.
 
-It started out as the kind of trip that needed real flashlights instead of apps. Almost none of us knew where we were going and there was no moon. There was only the fog of our breath, bare trees, and old roads. Someone up ahead called out, "The barn is just down this gravel path" and I heard rocks slip behind me and a girl cry out, "OZARK!" and everyone laughed. Ozark was the perfect expletive for anyone who had just spent four hours driving the back roads of Missouri looking for a party.
+It started out as the kind of trip that needed real flashlights instead of apps. Almost none of us knew where we were going and there was no moon. There was only the fog of our breath, bare trees, and old roads. Someone up ahead called out, "The barn is just down this gravel path." I heard rocks slip behind me and a girl cry out, "OZARK!" and everyone laughed. Ozark was the perfect expletive for anyone who had just spent four hours driving the back roads of Missouri looking for a party.
 
-The barn was down that path and the party was just beyond in a 10 acre clearing that was already packed with people. Headlights and bonfires lit the field and girls danced in truck beds and guys watched and literally hollered. Everyone was young and dumb and by time we arrived I was stupid drunk. I smiled, threw my arms up and broke away from my friends. I was meeting people. I wish I could remember her name or how I met her but I have tried. I can't. 
+The barn was down that path and the party was just beyond in a 10 acre clearing that was already packed with people. Headlights and bonfires lit the field and girls danced in truck beds and guys watched and literally hollered. Everyone was young and dumb and by time we arrived I was stupid drunk. I smiled, threw my arms up and broke away from my friends. I was meeting people. I think I met everyone but most importantly, I met her. I never did ask her name. 
 
-She was pretty and all I know for sure is she asked why I had a box of wine. I pulled the silver bag out of the box and yelled, "Because it is SPACE WINE!" She asked if I had ever been to space and I said no and she asked if I'd like to and I said yeah. She really looked at me and her bottom lip caught on her left lateral incisor and her eyes were green and she said, "Come with me?" She paused to touch my antecubital fossa, "I have something for you."
+She was pretty and all I know for sure is she asked why I had a box of wine. I pulled the silver bag out of the box and yelled, "Because it is SPACE WINE!" She asked if I had ever been to space and I said no and she asked if I'd like to and I said yeah. She paused to really look at me. Her bottom lip caught on her left lateral incisor and her eyes were green and she said, "Come with me?" She paused to touch my antecubital fossa, "I have something for you."
 
-Then we were in her shitty car and listening to bands I didn't know. I kept stopping myself from asking where we were going or why her left arm was in a cast. She threw trash out her window and drove quickly. Soon we were off main roads and driving past "no trespassing" signs and she stopped at a gate. She got out to open it and I thought maybe I should run but I didn't. We drove up what seemed like mining roads. Up and up and then she stopped and turned off the car.
+Then we were in her shitty car and listening to bands I didn't know. I kept stopping myself from asking where we were going or why her left arm was in a cast. She threw trash out her window and drove quickly. Soon we were off main roads and driving past "no trespassing" signs. She stopped at a gate and got out to open it. I thought maybe I should run but I didn't. We drove up what seemed like old coal mining roads. Up and up and then she stopped and turned off the car.
 
 "Can you swim?" she asked.
 
@@ -37,10 +37,12 @@ the middle of nowhere. It was dark. The only sound was gravel crushing under our
 
 "What is this place?" I asked.
 
-"It is kind of a gigantic battery." She said. "The electric company pumps water into the reservoir at night and then uses it to push turbines during the day. It is offline right now." She pointed to a ladder that led up the side of the reservoir. "We are going up there." And we climbed.
+"It is kind of a gigantic battery." She said. "The electric company pumps water into the upper reservoir at night and then uses it to push turbines during the day. It is offline right now." She pointed to a ladder that led up the side of the reservoir. "We are going up there." 
 
-At the top was a thin section of concrete that jutted into the water like a pier. We walked to the very end and sat next to each other. The reservoir was full almost to the top and we must have been on the tallest mountain in the area because there was nothing to see but sky and what seemed like the biggest infinity pool ever built.
+We climbed.
 
-She raised her index finger to pouted lips and she said, "shhhhhhhhhh."
+At the top was a thin section of concrete that jutted into the water like a pier. We walked to the very end and sat next to each other. The reservoir was full almost to the top and we must have been on the tallest mountain in the area. There was nothing to see but sky and what seemed like the biggest infinity pool ever built.
+
+I started to say something. She raised her index finger to pouted lips and said, "shhhhhhhhhh."
  
 That was my first trip to outer space.
