stars minor edit

--- a/markdown/2015-05-10-stars.md
+++ b/markdown/2015-05-10-stars.md
@@ -43,6 +43,6 @@ We climbed.
 
 At the top was a thin section of concrete that jutted into the water like a pier. We walked to the very end and sat next to each other. The reservoir was full almost to the top and we must have been on the tallest mountain in the area. There was nothing to see but sky and what seemed like the biggest infinity pool ever built.
 
-I started to say something. She raised her index finger to pouted lips and said, "shhhhhhhhhh."
+I started to say something. She raised her index finger to pouted lips and said, "shhhhhhhhhh, just watch."
  
 That was my first trip to outer space.
